Added link to new page
- a new page was added to try new things like google's font api and font effects using css2 and css
- filled some more content to the site
- i think i may try to be more specific in my commits to be more professional

--- a/index.html
+++ b/index.html
@@ -21,17 +21,27 @@
     <div class="header">
         <div class="header-top">
             Strar Enterprises
-            <a rel="noopener noreferrer" href="#mcu" target="_self">The Experience</a>
+            <a href="#mcu">The Experience</a>
+            <a href="./pages/chef-empha.html" target="_self">Chef Kiss</a>
+            <a rel="noopener noreferrer" href="https://youtu.be/dQw4w9WgXcQ" target="_blank">YouTube Explanation</a>
         </div>
         <div class="header-content">
-
+            <div class="title-text">
+                <p id="title-top">The Odin Project Experience<span id="by-strar">- by Strar</span></p>
+                <p id="title-descript">This site will showcase The Odin Project in the hands of Strar.
+                    With onlying having learned some HTML and CSS, Strar now has some big ideas for the future of their new found skill.
+                    Join the adventure
+                </p>
+                <a id="strar-button" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">Strar github</a>
+            </div>
+            <img src="./images/Screenshot from 2025-11-02 00-42-16.png" alt="AI Dog Gun YT Short Ranking">
         </div>
     </div>
 
     <div id="mcu" class="main-content">
         The Experience
         <div class="info-content">
-
+            
         </div>
     </div>
 
