--- a/index.html
+++ b/index.html
@@ -41,7 +41,26 @@
     <div id="mcu" class="main-content">
         The Experience
         <div class="info-content">
-            
+            <div>
+                <img src="./images/Screenshot from 2025-11-02 00-42-16.png">
+                <p>This is sample text, and I'm going to write more to make it a little longer.</p>
+            </div>
+            <div>
+                <img src="./images/Screenshot from 2025-11-02 00-42-16.png">
+                <p>This is sample text, and I'm going to write more to make it a little longer.</p>
+            </div>
+            <div>
+                <img src="./images/Screenshot from 2025-11-02 00-42-16.png">
+                <p>This is sample text, and I'm going to write more to make it a little longer.</p>
+            </div>
+            <div>
+                <img src="./images/Screenshot from 2025-11-02 00-42-16.png">
+                <p>This is sample text, and I'm going to write more to make it a little longer.</p>
+            </div>
+            <div>
+                <img src="./images/Screenshot from 2025-11-02 00-42-16.png">
+                <p>This is sample text, and I'm going to write more to make it a little longer.</p>
+            </div>
         </div>
     </div>
 
