Finished quote and added a new section
- The qupte section is now filled with content
- Added a new section that was missing from sudo code: sign-box

--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
     </div>
 
     <div class="quote">
+        <p>I was trying to think about how to make this quote section use just one element, but i dont really remember how i might get the author credit in the same element while moved in it's own space.</p>
+        <p>-So I'm Just Going To Make Another Paragraph Element</p>
+    </div>
 
+    <div class="sign-box">
+        
     </div>
 
     <div class="footer">
