Filled sign-box and footer
index html
- Content for the sign up box has been filled
- Footer text have been added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     With onlying having learned some HTML and CSS, Strar now has some big ideas for the future of their new found skill.
                     Join the adventure
                 </p>
-                <a id="strar-button" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">Strar github</a>
+                <a id="strar-button" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">GitHub</a>
             </div>
             <img src="./images/Screenshot from 2025-11-02 00-42-16.png" alt="AI Dog Gun YT Short Ranking">
         </div>
@@ -70,11 +70,15 @@
     </div>
 
     <div class="sign-box">
-        
+        <div>
+            <p>Join the adventure!</p>
+            <p>Follow my coding journey by following my github! Support me too with coding and cordial support</p>
+        </div>
+        <a id="strar-button" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">GitHub</a>
     </div>
 
     <div class="footer">
-
+        Copyright © Your Mother™
     </div>
 
 </body>
