--- a/pages/chef-empha.html
+++ b/pages/chef-empha.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content=".icons/Screenshot from 2025-10-30 01-21-57.png">
     <title>Chef Daily</title>
     <link rel="stylesheet" href="../styles/tonight.css">
-    <link rel="icon" href="./icons/Screenshot from 2025-10-30 01-21-57.png">
+    <link rel="icon" href="../icons/Screenshot from 2025-10-30 01-21-57.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rancho&effect=fire-animation | outline">
