Some index tweaks and finished the header css
index html
- turned the logo of Strar Enterprizes into a link
- added a <div> inside header-top around the links

navy-style css
- set defaults with the * selector
finished the header:
- set defaults with display and color with a chain selector
- separated the logo link with the rest of the links
- added margins to space things out
- turned the sign up link into a button look with title-text a descendant selector

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     
     <div class="header">
         <div class="header-top">
-            Strar Enterprises
-            <a href="#mcu">The Experience</a>
-            <a href="./pages/chef-empha.html" target="_self">Chef Kiss</a>
-            <a rel="noopener noreferrer" href="https://youtu.be/dQw4w9WgXcQ" target="_blank">YouTube Explanation</a>
+            <a id="logo" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">Strar Enterprises</a>
+            <div id="header-links">
+                <a href="#mcu">The Experience</a>
+                <a href="./pages/chef-empha.html" target="_self">Chef Kiss</a>
+                <a rel="noopener noreferrer" href="https://youtu.be/dQw4w9WgXcQ" target="_blank">YouTube Explanation</a>
+            </div>
         </div>
         <div class="header-content">
             <div class="title-text">
