feat: main-content and footer
index html
- add main-title class around the experience title

navy-style css
- content center with text-align
- increase .main-title size, bolden, and margin
- decrease dog-gun image sizes to 200px
- .footer background color, font color, padding, center text, and added .footer to the flex default display

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="title-text">
                 <p id="title-top">The Odin Project Experience<span id="by-strar">- by Strar</span></p>
                 <p id="title-descript">This site will showcase The Odin Project in the hands of Strar.
-                    With onlying having learned some HTML and CSS, Strar now has some big ideas for the future of their new found skill.
-                    Join the adventure
+                    With only having learned some HTML and CSS, Strar now has some big ideas for the future of their new found skill.
+                    Join the adventure by following Strar's GitHub!
                 </p>
                 <a id="strar-button" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">GitHub</a>
             </div>
@@ -41,7 +41,7 @@
     </div>
 
     <div id="mcu" class="main-content">
-        The Experience
+        <p class="main-title">The Experience
         <div class="info-content">
             <div>
                 <img src="./images/Screenshot from 2025-11-02 00-42-16.png">
