feat: quote css style
quote section is styled
- index add class quote-text for separation

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </div>
 
     <div class="quote">
-        <p>I was trying to think about how to make this quote section use just one element, but i dont really remember how i might get the author credit in the same element while moved in it's own space.</p>
-        <p>-So I'm Just Going To Make Another Paragraph Element</p>
+        <div class="quote-text">I was trying to think about how to make this quote section use just one element, but i dont really remember how i might get the author credit in the same element while moved in it's own space.</div>
+        <div class="author">-So I'm Just Going To Make Another Paragraph Element</div>
     </div>
 
     <div class="sign-box">
