feat: add sign box style

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 
     <div class="sign-box">
         <div>
-            <p>Join the adventure!</p>
-            <p>Follow my coding journey by following my github! Support me too with coding and cordial support</p>
+            <p id="join-ad">Join the adventure!</p>
+            <p>Follow my coding journey by following my github!</p>
         </div>
         <a id="strar-button" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">GitHub</a>
     </div>
