--- a/index.html
+++ b/index.html
@@ -19,24 +19,26 @@
 <body>
     
     <div class="header">
-        <div class="header-top">
-            <a id="logo" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">Strar Enterprises</a>
-            <div id="header-links">
-                <a href="#mcu">The Experience</a>
-                <a href="./pages/chef-empha.html" target="_self">Chef Kiss</a>
-                <a rel="noopener noreferrer" href="https://youtu.be/dQw4w9WgXcQ" target="_blank">YouTube Explanation</a>
+        <div class="header-element">
+            <div class="header-top">
+                <a id="logo" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">Strar Enterprises</a>
+                <div id="header-links">
+                    <a href="#mcu">The Experience</a>
+                    <a href="./pages/chef-empha.html" target="_self">Chef Kiss</a>
+                    <a rel="noopener noreferrer" href="https://youtu.be/dQw4w9WgXcQ" target="_blank">YouTube Explanation</a>
+                </div>
             </div>
-        </div>
-        <div class="header-content">
-            <div class="title-text">
-                <p id="title-top">The Odin Project Experience<span id="by-strar">- by Strar</span></p>
-                <p id="title-descript">This site will showcase The Odin Project in the hands of Strar.
-                    With only having learned some HTML and CSS, Strar now has some big ideas for the future of their new found skill.
-                    Join the adventure by following Strar's GitHub!
-                </p>
-                <a id="strar-button" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">GitHub</a>
+            <div class="header-content">
+                <div class="title-text">
+                    <p id="title-top">The Odin Project Experience<span id="by-strar">- by Strar</span></p>
+                    <p id="title-descript">This site will showcase The Odin Project in the hands of Strar.
+                        With only having learned some HTML and CSS, Strar now has some big ideas for the future of their new found skill.
+                        Join the adventure by following Strar's GitHub!
+                    </p>
+                    <a id="strar-button" rel="noopener noreferrer" href="https://github.com/strarstrar" target="_blank">GitHub</a>
+                </div>
+                <img src="./images/Screenshot from 2025-11-02 00-42-16.png" alt="AI Dog Gun YT Short Ranking">
             </div>
-            <img src="./images/Screenshot from 2025-11-02 00-42-16.png" alt="AI Dog Gun YT Short Ranking">
         </div>
     </div>
 
